# Azure-Cloud_Reporter

./: .env.example  .firebaserc  .gitignore  CONTRIBUTING.md  DEPLOYMENT_TODO.md  FIREBASE_INTEGRATION_TESTS.md  FIRESTORE_SCHEMA.md  IMPLEMENTATION_GUIDE.md  README.md  README_ENTERPRISE.md  eslint.config.js  firebase.json  index.html  jest.config.ts  jest.setup.ts  package-lock.json  package.json  tailwind.config.js  todo.md  tsconfig.app.json  tsconfig.jest.json  vite.config.ts
.storybook/: main.ts  preview.ts
docs/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  STAGE_2_3_ROADMAP.md  TECHNICAL_ARCHITECTURE.md  USER_GUIDE.md  backoffice-cloud-run.md  cloud-reporter-transformation.md  code-review.md
services/ingestion/: Dockerfile  README.md  pyproject.toml
services/ingestion/app/: main.py  pubsub.py
services/orchestrator/: README.md  pyproject.toml
services/orchestrator/app/: main.py
src/: App.tsx  ErrorBoundary.tsx  env.d.ts  index.css  main.tsx
src/__tests__/: accessibility.test.tsx  applyPreset.unit.test.ts  authFlow.unit.test.ts
src/auth/: authLogic.ts
src/components/: Button.tsx  FirebaseValidationDashboard.tsx  HeroCard.tsx  SampleChart.tsx  Spinner.tsx  ThemeToggle.tsx  UploadModal.tsx
src/contexts/: AuthContext.tsx  ThemeContext.tsx  authTypes.ts  authUtils.ts  themeContextBase.ts  themeDefaults.ts  themeTypes.ts
src/design-system/: foundations.stories.tsx  index.ts  tokens.ts
src/hooks/: useAuth.ts  useRealtimeWorkspace.ts  useTheme.ts
src/lib/: cache.ts  firebase-native.ts  firebase.ts
src/pages/: Assessments.tsx  Automations.tsx  (+11 more)
(+38 files in other folders)
